# A_FMM

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README  README.md  localdocs  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml  release.yml
A_FMM/: __init__.py  _version.py  creator.py  inputs.py  layer.py  scattering.py  stack.py  sub_sm.py
Docs/: api_summary.rst  conf.py  index.rst  intro.rst  reference-manual.rst  requirements.txt
Docs/jupyter/: 1D Scattering Matrix.ipynb  1D_mode_solver.ipynb  2D_grating.ipynb  2D_mode_solver.ipynb  Layer from function and PhC slab.ipynb  PML test.ipynb  examples.rst  mode_solver.ipynb
Docs/jupyter/.ipynb_checkpoints/: 1D Scattering Matrix-checkpoint.ipynb  PML test-checkpoint.ipynb
docs/: user_guide.tex  user_guide.toc
examples/: 1D_grating.py  1D_modes.py  1D_modes_multiprocessing.py  1D_orders.py  2D_circles.py  2D_grating.py  2D_orders.py  balance_test.py  creator_plot.py  curved.py  launch.bash  lay_abs.py  layer_test.py  pml_test.py  ridge_modes.py  slab_modes.py  slow_field.py  slow_multi.py  slow_multi_analytic.py
pytest/: test_layer.py  test_layer_creation.pkl  test_stack.py
pytest/pickles/: test_layer_modes.pkl  test_layer_transform.pkl  test_stack_1Dfield.pkl  test_stack_coefficients.pkl
