[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "A_FMM"
description = "Python implementation of the Aperiodic-Fourier Modal Method for electromagnetic simulation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Marco Passoni", email = "mpasson91@gmail.com" },
]
keywords = [
  'photonics',
  'simulation',
  'scattering matrix',
  'fourier modal methods',
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.23.1",
    "pandas>=1.4.2",
    "scipy>=1.8.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "toml>=0.10.2",
  "hatch-vcs==0.3.0",
]
doc = [
  "sphinx>=5.3.0",
  "sphinx-rtd-theme>=1.1.1",
  "nbsphinx>=0.8.12",
  "notebook>=6.5.2",
]


[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "A_FMM/_version.py"